# krok

./: .gitignore  Cargo.toml  README.md  justfile
crates/game/: Cargo.toml
crates/game-manager/: Cargo.toml
crates/game-manager/src/: board.rs  game.rs  game_manager.rs  lib.rs  player.rs
crates/game/src/: main.rs
web/: index.html
