[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.14", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# [profile.wasm-release]
# # Use release profile as default values
# inherits = "release"
# # Optimize with size in mind, also try "s", sometimes it is better.
# # This doesn't increase compilation times compared to -O3, great improvements
# opt-level = "z"
# # Do a second optimization pass removing duplicate or unused code from dependencies.
# # Slows compile times, marginal improvements
# lto = "fat"
# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1
